<resources>
    <string name="app_name">Phone Tracker</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_about_me">About me</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="select_language">Select Language</string>
    <string name="home_live_location_display">Live location display</string>
    <string name="home_live_location_subtitle">See your current location on map</string>
    <string name="home_realtime_sharing">Real-time sharing</string>
    <string name="home_realtime_sharing_subtitle">See friends\' locations in your\nsharing list</string>
    <string name="home_share_secure_code">Share your secure code</string>
    <string name="home_share_secure_code_subtitle">Control who you share your location with</string>
    <string name="permission_dialog_title">Please enable location permissions.</string>
    <string name="permission_dialog_message">We need your location permission to provide you with more accurate location information.</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>
    <string name="setup_device_name_title">Set Device Name</string>
    <string name="setup_device_name_prompt">Set up your device’s name</string>
    <string name="setup_device_name_label">Name</string>
    <string name="confirm">Confirm</string>
    <string name="about">About</string>
    <string name="about_version_format">V%1$s</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="live_location_you_are_at">You are at:</string>
    <string name="live_location_locating">Locating...</string>
    <string name="live_location_marker_title">Current location</string>
    <string name="live_location_permission_needed">Location permission is required to show your position.</string>
    <string name="live_location_permission_denied">Location permission was denied.</string>
    <string name="live_location_unavailable">Unable to get current location.</string>
    <string name="live_location_recenter">Recenter current location</string>
    <string name="realtime_you_are_at">You are at:</string>
    <string name="realtime_friend_are_at">%1$s is at:</string>
    <string name="realtime_friend_location_summary">%1$s is at %2$s</string>
    <string name="realtime_self_placeholder_address">Location is being updated...</string>
    <string name="realtime_shared_list">Shared List</string>
    <string name="realtime_no_shared_objects">No Shared Objects</string>
    <string name="realtime_go_to_add">Go to Add</string>
    <string name="realtime_location_not_shared">Location not shared yet.</string>
    <string name="realtime_location_format">Lat %1$.5f, Lng %2$.5f</string>
    <string name="friend_action_more">More actions</string>
    <string name="friend_action_edit">Edit</string>
    <string name="friend_action_delete">Delete</string>
    <string name="friend_edit_title">Edit friend</string>
    <string name="friend_delete_title">Delete friend</string>
    <string name="friend_delete_message">Remove %1$s from your shared list?</string>
    <string name="friend_profile_updated">Friend profile updated</string>
    <string name="friend_deleted">Friend deleted</string>
    <string name="share_secure_code">Share my secure code</string>
    <string name="share_secure_code_description">Share the secure code so your friends and family can see your location</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="enter_invite_code">Enter the invite code</string>
    <string name="invite_code_hint">Code</string>
    <string name="pairing_join">Join</string>
    <string name="pairing_next">Next</string>
    <string name="pairing_save">Save</string>
    <string name="pairing_scan_qr_code">Scan QR code</string>
    <string name="scan_qr_code_title">Scan QR Code</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_friend_description">Please enter the verification code provided by the other party. Share your location</string>
    <string name="share_join_description">Please enter the verification code provided by the other person. Securely share your location.</string>
    <string name="enter_display_name">Enter a Display Name</string>
    <string name="enter_username">Enter username</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="pairing_copied">Copied</string>
    <string name="pairing_saved">Saved</string>
    <string name="pairing_loading">Loading...</string>
    <string name="pairing_failed">Pairing failed</string>
    <string name="pairing_success">Pairing successful</string>
    <string name="pairing_success_with_name">Pairing successful: %1$s</string>
    <string name="pairing_invalid_code">Please enter a valid invite code</string>
    <string name="pairing_register_failed">Unable to load secure code</string>
    <string name="scan_camera_permission_needed">Camera permission is required to scan QR codes.</string>
    <string name="scan_qr_failed">Unable to start camera scanner.</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_chinese" translatable="false">中文</string>
    <string name="language_hindi" translatable="false">हिन्दी</string>
    <string name="language_spanish" translatable="false">Español</string>
    <string name="language_arabic" translatable="false">العربية</string>
    <string name="language_portuguese" translatable="false">Português</string>
    <string name="language_indonesian" translatable="false">Bahasa Indonesia</string>
    <string name="language_russian" translatable="false">Русский</string>
    <string name="language_french" translatable="false">Français</string>
    <string name="language_japanese" translatable="false">日本語</string>
    <string name="language_korean" translatable="false">한국어</string>
    <string name="ad_label">Ad</string>
    <string name="ad_label_caps">AD</string>
    <string name="ad_install">INSTALL</string>
    <string name="ad_open">Open</string>
    <string name="ad_test_google_ads">Test Google Ads</string>
    <string name="ad_test_pangle_ads">Test Pangle Ads</string>
    <string name="ad_test_pangle_desc">Test Pangle desc</string>
    <string name="ad_test_topon_ads">Test TopOn Ads</string>
    <string name="ad_test_topon_desc">desc</string>
    <string name="ad_loading">Loading AD...</string>
</resources>
