<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/setupBackButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="44dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif"
        android:text="@string/setup_device_name_title"
        android:textColor="#333333"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/avatarHolder"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/bg_device_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/deviceAvatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/figma_device_avatar" />
    </FrameLayout>

    <TextView
        android:id="@+id/setupPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="247dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/setup_device_name_prompt"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="296dp"
        android:fontFamily="sans-serif"
        android:text="@string/setup_device_name_label"
        android:textColor="#333333"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/deviceNameInput"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="327dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/bg_name_field"
        android:fontFamily="sans-serif"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:minHeight="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:singleLine="true"
        android:textColor="#333333"
        android:textColorHint="#999999"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="SM-520" />

    <TextView
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="615dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_primary_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
