<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pairing_gradient">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addFriendProfileToolbar"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/transparent"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/back"
        app:title="">

        <TextView
            android:id="@+id/addFriendProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/add_friend"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/displayNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:fontFamily="sans-serif"
        android:text="@string/enter_display_name"
        android:textColor="#333333"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addFriendProfileCard"
        android:layout_width="0dp"
        android:layout_height="332dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_pairing_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/displayNameEditText"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="13dp"
            android:background="@drawable/bg_pairing_input"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="#6275FF"
            android:textColorHint="#426275FF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/maleCard"
            android:layout_width="158dp"
            android:layout_height="132dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="95dp"
            android:background="@drawable/bg_gender_selected"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/maleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/gender_male"
                android:textColor="#6275FF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="107dp"
                android:layout_height="85dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="47dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/figma_gender_male"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/femaleCard"
            android:layout_width="158dp"
            android:layout_height="132dp"
            android:layout_marginStart="162dp"
            android:layout_marginTop="95dp"
            android:background="@drawable/bg_gender_unselected"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/femaleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/gender_female"
                android:textColor="#999999"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="107dp"
                android:layout_height="85dp"
                android:layout_marginStart="41dp"
                android:layout_marginTop="47dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/figma_gender_female"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_pairing_primary_button"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/pairing_save"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
